# DDD

./: .gitignore  CMakeLists.txt  README.md  debug_log.txt
config/: game.json  input.json  inventory.json  spawns.json  spells.json
config/maps/: level01.json  level_house.json
docs/: architecture_audit.md  build_run.md  overview_and_map.md  release-notes.md  systems_overview.md  top_priority_tasks.md
resources/maps/: level01.json  level02.json  level03.json  level04.json  level05.json  level06.json
rules/: BOARD.md  GLOBAL.md  GRAPHICS.md  MECHANICS.md  MECHANICS_INVENTORY.md  MECHANICS_UI.md  PHYSICS.md  TECHWRITER.md
scripts/: build.sh  run.sh
slack/: general.md  general_old.md  graphics.md  graphics_techwriter_resources.md  mechanics.md  mechanics_graphics_atlas.md  mechanics_inventory.md  mechanics_physics_place_break.md  physics.md  techwriter.md  ui_inventory.md
src/: main.cpp
src/components/: DropComponent.h  GroundedComponent.h  HealthComponent.h  InputComponent.h  InventoryComponent.h  PhysicsBodyComponent.h  ShadowComponent.h  SpellbookComponent.h  SpriteAnimationComponent.h  SpriteComponent.h  SummonComponent.h  Tags.h  TilemapComponent.h  TransformComponent.h
src/core/: Component.h  Entity.h  EntityManager.h  EventBus.h  System.h
src/events/: AppEvents.h  GameEvents.h  GameplayCommands.h  InventoryEvents.h  MatchEvents.h  PhysicsEvents.h  SpellEvents.h  TileEvents.h
src/game/: ConfigLoader.cpp  ConfigLoader.h  GameApp.cpp  GameApp.h  GameConfig.h  GameplayCommandBuffer.h  MenuController.cpp  MenuController.h  ResourceLoader.cpp  ResourceLoader.h  SaveData.h  SaveSystem.cpp  SaveSystem.h  SystemsBuilder.cpp  SystemsBuilder.h  WorldLoader.cpp  WorldLoader.h
src/managers/: CameraManager.h  DebugManager.h  PhysicsManager.h  ResourceManager.h  TimeManager.h  WindowManager.h
src/physics/: PhysicsDefs.h
src/systems/: CameraFollowSystem.cpp  CameraFollowSystem.h  DebugSystem.cpp  DebugSystem.h  DropPickupSystem.cpp  DropPickupSystem.h  InputSystem.cpp  InputSystem.h  InventorySystem.cpp  InventorySystem.h  MatchSystem.cpp  MatchSystem.h  PhysicsSystem.h  PlayerControlSystem.cpp  PlayerControlSystem.h  RenderSystem.cpp  RenderSystem.h  RespawnSystem.cpp  RespawnSystem.h  SpawnSystem.cpp  SpawnSystem.h  SpellSystem.cpp  SpellSystem.h  TileInteractionSystem.cpp  TileInteractionSystem.h  TopDownControlSystem.cpp  TopDownControlSystem.h  UIRenderSystem.cpp  UIRenderSystem.h
src/utils/: Constants.h  CoordinateUtils.h  IsoConfig.h  IsoCoordinate.h  Vec2.h
